# DoSuKo

./: .clang-format  .gitignore  CMakeLists.txt  DumbTwoSolving.cpp  LoadBoards.cpp  README.md  SudokuBoard.cpp  SudokuBoard.h  main.cpp  test_functions.cpp
Solvers/: DumbOne.cpp  DumbOne.h
examples/: boards_and_solutions.csv  example500.csv
game/: Cell.h  ColRowVal.h  LoadBoards.h  LocalBox.h  PossibleCell.h  PotentialCell.h  SudokuBoard.cpp  SudokuBoard.h  SudokuBoard.inl
game/Cell/: BasicCell.h  PotentialCell.h
solvers/: DumbOne.cpp  DumbOne.h  solver_functions.cpp  solver_functions.h
test/: test_functions.cpp
tests/: CMakeLists.txt  ExampleBoardStrings.h  test_basic_cell_boards.cpp  test_basic_cell_boards.h  test_boards.cpp  test_boards.h  test_functions.cpp  test_functions.h  test_potential_cell_boards.cpp  test_potential_cell_boards.h  testing.cpp  testing.h
